--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('C:\Users\0010MF744\Desktop\AI - Copy\ai\public\images\WebsiteBody.png');
+    background-image:url('C:\Users\0010MF744\Desktop\onlineportal\onlineportal\public\images\WebsiteBody.png');
     background-position: center;
     background-size: cover; 
     background-attachment: fixed; 
