--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -15,7 +15,7 @@ z-index: 100;
     position: absolute; /* relative kela ki navbar yachya khali yeta*/
     height: 660px;
     width: 100px;
-    background-image: url('C:\Users\0010MF744\Desktop\AI - Copy\ai\public\images\3.png');
+    background-image: url('C:\Users\0010MF744\Desktop\onlineportal\onlineportal\public\images\3.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -53,7 +53,7 @@ z-index: 100;
         position: absolute;
         height: 590px;
         width: 100px;
-        background-image: url('C:\Users\0010MF744\Desktop\AI - Copy\ai\public\images\3.png');
+        background-image: url('C:\Users\0010MF744\Desktop\onlineportal\onlineportal\public\images\WebsiteBody.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -88,7 +88,7 @@ z-index: 100;
         position: absolute;
         height: 390px;
         width: 100px;
-        background-image: url('C:\Users\0010MF744\Desktop\AI - Copy\ai\public\images\3.png');
+        background-image: url('C:\Users\0010MF744\Desktop\onlineportal\onlineportal\public\images\3.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
